--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <div id="links">
-      <a class="link" href="https://www.instagram.com/andrelfmp3" target="_blank">
+      <a class="link" href="https://www.instagram.com/hackingstudies" target="_blank">
         <i class="fab fa-instagram">&nbsp;</i>Instagram
       </a>
       <a class="link" href="https://open.spotify.com/user/21kcyqxnjeqmchdbgvncxvosi/playlists" target="_blank">
